# parallaxe-icpe-groundwater-exposure

./: .gitignore  README.md  pyproject.toml
cloudflare/: README.md
cloudflare/lookup-worker/: wrangler.jsonc
cloudflare/lookup-worker/src/: index.js
cloudflare/scripts/: upload_r2_shards.sh
docs/: portfolio_template.xlsx
scripts/: 03_generate_icpe_exposure_map.py  10_build_sirene_existence_shards.py  11_export_product_tables.py
