[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parallaxe-icpe-groundwater-exposure"
version = "0.1.0"
description = "ICPE exposure to long-term groundwater trends in France"
requires-python = ">=3.9"
dependencies = [
  "duckdb",
  "fiona",
  "geopandas",
  "matplotlib",
  "numpy",
  "pandas",
  "plotly",
  "requests",
  "scipy",
  "shapely",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
